--- a/Music_Website.css
+++ b/Music_Website.css
@@ -8,7 +8,7 @@
 body{
   margin:0;
   min-height: 100vh;
-  background-color: #520e1f;
+  background-color: #ff5d8f;
   background-position: center;
 }
 nav{
@@ -21,7 +21,7 @@ nav ul{
   list-style-type: none;
   height: 65px;
   font-size: 10px;
-  color: rgb(205, 208, 14);
+  color: rgb(122, 4, 32);
   /* background-color: antiquewhite; */
 }
 nav ul li{
@@ -97,9 +97,6 @@ nav ul li{
   color: white;
   align-items: center;
 }
-.icons button:active{
-  background-color: rgb(134, 26, 38);
-}
 .icons{
   padding: 5px 0;
 }
@@ -121,10 +118,12 @@ nav ul li{
 .activeBtn{
   opacity: 1;
 }
-.musicName{
+.musicName2{
   position: absolute;
   left:10%;
-  color: antiquewhite;
+  color: rgb(176, 10, 19);
   font-family: "Poppins",sans-serif;
   text-transform: capitalize;
+  font-size: 30px;
+  font-weight: 600;
 }
