--- a/Music_Website.css
+++ b/Music_Website.css
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   min-height: 100vh;
-  background-color: #ff5d8f;
+  background-color: #0e0206;
   background-position: center;
 }
 nav {
@@ -21,8 +21,7 @@ nav ul {
   list-style-type: none;
   height: 65px;
   font-size: 10px;
-  color: rgb(122, 4, 32);
-  /* background-color: antiquewhite; */
+  color: rgb(135, 7, 7);
 }
 nav ul li {
   padding: 0 12px;
@@ -48,10 +47,7 @@ nav ul li {
   z-index: -1; /* keeps it behind */
   overflow: hidden;
   opacity: 0;
-  transition: opacity 0.4s ease-in-out;
-}
-.active {
-  opacity: 1;
+  transition: opacity 0.4s ease;
 }
 .container {
   background-color: aqua;
@@ -64,6 +60,7 @@ nav ul li {
   background-size: cover; /* cover width and height */
   background-position: center;
   padding: 23px;
+  animation: glow 10s linear infinite;  
 }
 .songItem span {
   position: absolute;
@@ -71,18 +68,16 @@ nav ul li {
   font-size: 20px;
 }
 .songItem img {
-  width: 20%;
+  width: 200px;
   height: 200px;
   border-radius: 100px;
 }
-.timing {
-  opacity: 0;
-}
-.visible {
-  opacity: 1;
+.duration{
+  opacity:0;
 }
 .aniActive {
   animation: spinning 12s linear infinite;
+  animation: glow 100ms linear infinite;
 }
 @keyframes spinning {
   0% {
@@ -91,6 +86,12 @@ nav ul li {
   100% {
     transform: rotate(360deg);
   }
+}
+@keyframes glow{
+  0%{box-shadow: 0 0 5px #ff5d8f;}
+  50%{box-shadow: 0 0 15px #0df0a8;}
+  70%{box-shadow: 0 0 25px #ff5d8f;}
+  100%{box-shadow:0 0 15px #c4dd08, 0 0 50px #ff5d8f;}
 }
 .bottom {
   position: sticky;
@@ -135,7 +136,7 @@ nav ul li {
 .activeBtn {
   opacity: 1;
 }
-.musicName2 {
+.name2{
   position: absolute;
   left: 10%;
   color: rgb(176, 10, 19);
@@ -146,5 +147,9 @@ nav ul li {
 }
 .currentTime {
   position: absolute;
+  color: #fff;
   right: 26px;
+}
+.active {
+  opacity: 1;
 }
