--- a/Music_Website.css
+++ b/Music_Website.css
@@ -26,6 +26,10 @@ nav ul {
 nav ul li {
   padding: 0 12px;
   cursor: pointer;
+  box-shadow:0;
+}
+nav ul li:hover{
+  animation: glow 700ms linear;
 }
 .brand img {
   width: 44px;
@@ -175,10 +179,11 @@ font-size: 24px;
   animation: spinning 12s linear infinite, glow 700ms linear infinite;
 }
 @keyframes glow{
-  0%{box-shadow: 0 0 5px #ff5d8f;}
-  20%{box-shadow: 0 0 15px #ff5d8f;}
-  40%{box-shadow: 0 0 25px #0df0a8;}
-  60%{box-shadow: 0 0 25px #0df0a8;}
-  80%{box-shadow: 0 0 15px #ff5d8f;}
-  100%{box-shadow:0 0 5px #c4dd08, 0 0 50px #ff5d8f;}
+  0%{box-shadow: 0 0 5px #df16d9;}
+  15%{box-shadow: 0 0 10px #a6703b;}
+  30%{box-shadow: 0 0 15px #02f7aa;}
+  45%{box-shadow: 0 0 25px #32b5b5;}
+  60%{box-shadow: 0 0 30px #0df037;}
+  75%{box-shadow: 0 0 25px #4d7be6;}
+  90%{box-shadow:0 0 15px #554fa1, 0 0 50px #20bbef;}
 }
